[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "dateutil",
]

[project.optional-dependencies]
test = [
    "pytest",
    "hypothesis",
]

[tool.black]
line-length = 121

[tool.pytest.ini_options]
norecursedirs= "tests/utils"